Fix some layout issues

--- a/frontend/src/styles/base/_reset.scss
+++ b/frontend/src/styles/base/_reset.scss
@@ -40,7 +40,6 @@ small {
   vertical-align: inherit;
   box-sizing: inherit;
   background: inherit;
-  overflow: inherit;
 }
 
 ol,
