--- a/frontend/src/styles/components/global_components/_image_modal.scss
+++ b/frontend/src/styles/components/global_components/_image_modal.scss
@@ -17,13 +17,13 @@
     width: 80vw;
     max-width: 50rem;
     height: 80vh;
-    border-radius: 0.2rem;
+    border-radius: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
 
-    padding: 1rem;
+    padding: 1rem 3rem;
 
     .big-button,
     input[type="text"] {
@@ -46,11 +46,13 @@
       position: absolute;
       top: 2%;
       right: 2%;
+      z-index: 20;
     }
 
     .images-modal-content {
-      width: 90%;
-      overflow: scroll;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
     }
   }
 }
